@@ -80,7 +80,7 @@
         <module>modules/objectmappers-all</module>
         <module>modules/objectmappers-commons</module>
         <module>modules/objectmappers-modelmapper</module>
-        <module>modules/objectmappers-tests</module>
+        <module>modules/objectmappers-testflow</module>
     </modules>
 
     <properties>
@@ -141,6 +141,7 @@
         <maven-dependency-plugin.version>3.1.2</maven-dependency-plugin.version>
         <maven-enforcer-plugin.version>3.0.0-M3</maven-enforcer-plugin.version>
         <maven-versions-plugin.version>2.8.1</maven-versions-plugin.version>
+        <maven-checksum-plugin.version>1.8</maven-checksum-plugin.version>
         <maven-help-plugin.version>3.2.0</maven-help-plugin.version>
         <maven-build-helper-plugin.version>3.2.0</maven-build-helper-plugin.version>
         <maven-jar-plugin.version>3.2.0</maven-jar-plugin.version>
@@ -148,10 +149,11 @@
         <maven-resources-plugin.version>3.2.0</maven-resources-plugin.version>
         <maven-project-info-reports-plugin.version>3.1.1</maven-project-info-reports-plugin.version>
         <maven-assembly-plugin.version>3.3.0</maven-assembly-plugin.version>
+        <maven-checkstyle-plugin.version>3.0.0</maven-checkstyle-plugin.version>
         <maven-javadoc-plugin.version>3.2.0</maven-javadoc-plugin.version>
         <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
-        <maven-surefire-plugin.version>3.0.0-M5</maven-surefire-plugin.version>
-        <maven-surefire-report-plugin.version>3.0.0-M5</maven-surefire-report-plugin.version>
+        <maven-surefire-plugin.version>3.0.0-M4</maven-surefire-plugin.version>
+        <maven-surefire-report-plugin.version>3.0.0-M4</maven-surefire-report-plugin.version>
         <maven-jacoco-plugin.version>0.8.6</maven-jacoco-plugin.version>
     </properties>
 
@@ -308,6 +310,12 @@
             <artifactId>junit-platform-runner</artifactId>
             <version>${junit-platform.version}</version>
             <scope>test</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>junit</groupId>
+                    <artifactId>junit</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
 
         <!-- Mockito test library dependencies -->
@@ -469,6 +477,25 @@
                         </configuration>
                     </execution>
                 </executions>
+            </plugin>
+
+            <plugin>
+                <groupId>net.nicoulaj.maven.plugins</groupId>
+                <artifactId>checksum-maven-plugin</artifactId>
+                <version>${maven-checksum-plugin.version}</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>artifacts</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <algorithms>
+                        <algorithm>MD5</algorithm>
+                        <algorithm>SHA-1</algorithm>
+                    </algorithms>
+                </configuration>
             </plugin>
 
             <plugin>
@@ -724,6 +751,42 @@
     </pluginRepositories>
 
     <profiles>
+        <!-- Checkstyle profile -->
+        <profile>
+            <id>code-quality</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-checkstyle-plugin</artifactId>
+                        <version>${maven-checkstyle-plugin.version}</version>
+                        <executions>
+                            <execution>
+                                <id>validate</id>
+                                <phase>validate</phase>
+                                <configuration>
+                                    <configLocation>checkstyle/checkstyle.xml</configLocation>
+                                    <encoding>${project.build.outputEncoding}</encoding>
+                                    <consoleOutput>true</consoleOutput>
+                                    <failsOnError>true</failsOnError>
+                                </configuration>
+                                <goals>
+                                    <goal>check</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                        <dependencies>
+                            <dependency>
+                                <groupId>com.puppycrawl.tools</groupId>
+                                <artifactId>checkstyle</artifactId>
+                                <version>8.14</version>
+                            </dependency>
+                        </dependencies>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+
         <!-- Assembly profile -->
         <profile>
             <id>assembly</id>
@@ -811,10 +874,6 @@
                 <jdk>(,9)</jdk>
             </activation>
             <properties>
-                <compilerArgs>
-                    -XDignore.symbol.file
-                    -Xlint:all
-                </compilerArgs>
                 <java.version>8</java.version>
                 <asm.version>9.0</asm.version>
             </properties>
@@ -843,6 +902,11 @@
                             <target>${maven.compiler.target}</target>
                             <encoding>${project.build.outputEncoding}</encoding>
                             <forceJavacCompilerUse>true</forceJavacCompilerUse>
+
+                            <compilerArgs>
+                                -XDignore.symbol.file
+                                -Xlint:all
+                            </compilerArgs>
 
                             <excludes>
                                 <exclude>**/module-info.java</exclude>
@@ -879,11 +943,6 @@
                 <jdk>[11,)</jdk>
             </activation>
             <properties>
-                <compilerArgs>
-                    -XX:-OmitStackTraceInFastThrow
-                    --illegal-access=permit
-                    --enable-preview
-                </compilerArgs>
                 <java.version>11</java.version>
                 <asm.version>9.0</asm.version>
             </properties>
@@ -919,6 +978,12 @@
 
                             <meminitial>128m</meminitial>
                             <maxmem>512m</maxmem>
+
+                            <compilerArgs>
+                                <arg>
+                                    --add-exports=org.junit.platform.commons/org.junit.platform.commons.util=io.nullables.api.playground.objectmappers.testflow
+                                </arg>
+                            </compilerArgs>
                         </configuration>
                         <dependencies>
                             <dependency>
@@ -951,16 +1016,15 @@
             </build>
         </profile>
 
-        <!-- Unit tests with code coverage profile -->
+        <!-- Tests with code coverage profile -->
         <profile>
-            <id>unit-test</id>
+            <id>test</id>
             <activation>
                 <file>
                     <exists>${basedir}/src/test</exists>
                 </file>
             </activation>
             <properties>
-                <test-groups.include/>
                 <surefire.commands>
                     -Duser.language=en
                     -Duser.country=GB
@@ -988,19 +1052,20 @@
                             <artifactId>maven-surefire-plugin</artifactId>
                             <version>${maven-surefire-plugin.version}</version>
                             <configuration>
-                                <disableXmlReport>true</disableXmlReport>
+                                <forkCount>0</forkCount>
                                 <skipTests>${unit-tests.skip}</skipTests>
-                                <groups>${test-groups.include}</groups>
+                                <failIfNoTests>${unit-tests.fail}</failIfNoTests>
+                                <disableXmlReport>true</disableXmlReport>
                                 <reportFormat>plain</reportFormat>
                                 <testFailureIgnore>false</testFailureIgnore>
                                 <trimStackTrace>false</trimStackTrace>
                                 <useSystemClassLoader>false</useSystemClassLoader>
                                 <printSummary>true</printSummary>
                                 <useFile>false</useFile>
-                                <rerunFailingTestsCount>2</rerunFailingTestsCount>
-                                <forkedProcessTimeoutInSeconds>21600</forkedProcessTimeoutInSeconds>
                                 <redirectTestOutputToFile>true</redirectTestOutputToFile>
-                                <failIfNoTests>${unit-tests.fail}</failIfNoTests>
+                                <includes>
+                                    <include/>
+                                </includes>
                                 <argLine>
                                     ${surefire.memory}
                                     ${surefire.fileEncoding}
@@ -1009,22 +1074,8 @@
                                     ${surefire.timezone}
                                     ${surefire.commands}
                                 </argLine>
-                                <includes>
-                                    <include/>
-                                </includes>
                                 <properties>
-                                    <property>
-                                        <name>usedefaultlisteners</name>
-                                        <value>false</value>
-                                    </property>
-                                    <property>
-                                        <name>listener</name>
-                                        <value>org.junit.platform.launcher.listeners.SummaryGeneratingListener</value>
-                                    </property>
                                     <systemPropertyVariables>
-                                        <reportDirectory>${project.build.directory}/allure-report</reportDirectory>
-                                        <allure.results.directory>${project.build.directory}/allure-results
-                                        </allure.results.directory>
                                         <java.awt.headless>true</java.awt.headless>
                                     </systemPropertyVariables>
                                 </properties>
